2017-06-01  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-686

	* src/workspace.cc: New WSV agenda_array_index.

	* src/agendas.cc:

	Add agenda_array_index as input to test_agenda_array and
	pnd_agenda_array.

	* src/agenda_record.cc:

	Remove agenda index as last argument in agenda_arrayExecute interface.
	It is now passed as a normal WSV input for agenda arrays.

	* src/m_cloudradar.cc: Adapt call to pnd_agenda_arrayExecute.

	* src/m_general.cc: Adapt call to test_agenda_arrayExecute.

	* src/m_agenda.cc, src/methods.cc:

	Add agenda_array_index as input to ArrayOfAgendaExecute.

	* controlfiles/artscomponents/agendas/TestArrayOfAgenda.arts:

	Adapt for introduction of new WSV agenda_array_index.

	* src/make_auto_md_cc.cc:

	Adapt generated code for changed variable name.

2017-06-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-685

	* src/m_rte.cc (iyEmissionStandard):
	* src/m_transmitter.cc (iyTransmissionStandard):
	* src/m_fos.cc (iyHybrid): Adopted call of
	get_pointers_for_analytical_jacobians.

	* src/m_jacobian.cc (jacobianAddScatSpecies): Had missed to set
	rq.Analytical.

	* src/jacobian.cc (get_pointers_for_analytical_jacobians):
	Replaced nscats with scat_species as input argument, and changed
	identification of scattering species index.

2017-05-31  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-684

	* src/m_cloudradar.cc (pnd_size_gridFromScatMeta): New method, to
	make psd/pnd part even more modular.

	* src/methods.cc: Added some documentation text, but there are
	still gaps.

	* src/workspace.cc:
	* src/agendas.cc: Wrote documentation text for the variables
	introduced recently.

2017-05-31  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-683

	* CMakeLists.txt:

	Improved detection of anaconda presence.

	First check for CblasLapack, then LaPack. Fixes linking issue on DKRZ's
	Mistral supercomputer when compiling with Intel C++.
	^^^^^ Please let me know if this change creates problems in LaPack