@@ -1,3 +1,10 @@
+2017-06-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-687
+
+	* src/m_cloudradar.cc (pnd_size_gridFromScatMeta): Added
+	scat_index as GIN argument. The method should now be complete.
+
 2017-06-01  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-686
